# discord-protocol

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
protocol/: Cargo.toml
protocol/src/: channel.rs  discord.rs  lib.rs  macros.rs  p2p.rs
